fix button width on small screen sizes

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -12,6 +12,10 @@ a {
     border-bottom: 2px solid #007bff;
 }
 
+.url_submit_button {
+    min-width: 150px;
+}
+
 
 /* sticky footer */
 body {
